--- a/UI/KhachHangUI/UI_KhachHang.form
+++ b/UI/KhachHangUI/UI_KhachHang.form
@@ -6,7 +6,7 @@
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1200, 659]"/>
+      <Dimension value="[1200, 620]"/>
     </Property>
   </Properties>
   <Events>
@@ -34,16 +34,17 @@
                       <Component id="jLabel1" min="-2" pref="150" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="txtTimKH" min="-2" pref="300" max="-2" attributes="0"/>
-                      <EmptySpace pref="365" max="32767" attributes="0"/>
+                      <EmptySpace pref="344" max="32767" attributes="0"/>
                       <Component id="btnThemKH" min="-2" pref="235" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="btnLichsuKH" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="btnCapNhatKH" min="-2" pref="143" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnXoaKH" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jspKH" alignment="1" max="32767" attributes="0"/>
               </Group>
@@ -62,14 +63,18 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-              <Component id="jspKH" min="-2" pref="475" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnLichsuKH" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="btnCapNhatKH" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="btnXoaKH" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+              <Component id="jspKH" min="-2" pref="500" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnCapNhatKH" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="btnXoaKH" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="btnLichsuKH" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
